# waves-qt

./: CMakeLists.txt  Makefile  README.md  delayaudiofeedback.cpp  delayaudiofeedback.h  main.cpp  main.qml  moc_message.cpp  org.kaetaen.waves.desktop
